@@ -1,5 +1,11 @@
 2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-pgp-source.c: When importing a PGP key make
+    sure to refresh imported keys synchronously. This fixes problems 
+    returning the list of keys that were imported.
+    
+2006-08-17  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-transfer-operation.c: Add proper destroy
     callback for gchar* 
     
